# application

./: CMakeLists.txt  buffers.fbs  main.cpp
include/: Algorithm.hpp  binary-parsing.hpp  buffers_generated.h  executer.hpp  persistanceSharedRingBuffer.hpp
src/: client.cpp  executer.cpp
